--- a/WonderOZ/View/Base.lproj/Main.storyboard
+++ b/WonderOZ/View/Base.lproj/Main.storyboard
@@ -30,9 +30,6 @@
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Tz-vD-X1l">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="park3" translatesAutoresizingMaskIntoConstraints="NO" id="9Ln-d8-je2" userLabel="AdventureImage">
-                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
-                                                </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name,Address and distance" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kMy-7w-tGA" userLabel="AdventureTitle">
                                                     <rect key="frame" x="0.0" y="100" width="375" height="100"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -89,6 +86,9 @@
                                                         <action selector="favoriteClicked:" destination="V81-zF-KFB" eventType="touchUpInside" id="bp3-jb-xQl"/>
                                                     </connections>
                                                 </button>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="park3" translatesAutoresizingMaskIntoConstraints="NO" id="9Ln-d8-je2" userLabel="AdventureImage">
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
+                                                </imageView>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
@@ -177,11 +177,11 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="L13-VK-jhT">
                                 <rect key="frame" x="16" y="105" width="343" height="513"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="5" minimumInteritemSpacing="2" id="Dd1-xW-2hq">
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="Dd1-xW-2hq">
                                     <size key="itemSize" width="170" height="170"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="10" maxX="0.0" maxY="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="10" maxX="0.0" maxY="5"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="ycH-j9-jLd" customClass="myCell" customModule="WonderOZ" customModuleProvider="target">
@@ -210,7 +210,7 @@
                                                 </label>
                                             </subviews>
                                         </view>
-                                        <color key="backgroundColor" red="0.99942404029999998" green="0.98555368190000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstItem="OYP-Tn-6Ax" firstAttribute="leading" secondItem="ycH-j9-jLd" secondAttribute="leading" id="2Cv-u7-pX8"/>
                                             <constraint firstAttribute="trailing" secondItem="OYP-Tn-6Ax" secondAttribute="trailing" id="fRj-L1-DdC"/>
@@ -221,6 +221,7 @@
                                             <outlet property="EventTitle" destination="H4y-5b-475" id="LJy-RL-v65"/>
                                             <outlet property="NumberOfEvent" destination="cT4-IB-dk2" id="HHy-Uz-pjM"/>
                                             <outlet property="imageView" destination="OYP-Tn-6Ax" id="PBJ-Ui-O8b"/>
+                                            <segue destination="V81-zF-KFB" kind="showDetail" identifier="CateToAdvSegue" id="oOf-A9-px3"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -465,14 +466,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Adding your comments" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cak-za-9TG" userLabel="inputTextField">
-                                <rect key="frame" x="5" y="898" width="276" height="48"/>
+                                <rect key="frame" x="5" y="947" width="276" height="48"/>
                                 <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
                             </textField>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ocr-x3-SUU">
-                                <rect key="frame" x="0.0" y="64" width="375" height="791"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="884"/>
                                 <subviews>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Description" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="58o-Xp-2Tf" userLabel="DescribtionTextView">
                                         <rect key="frame" x="0.0" y="182" width="375" height="150"/>
@@ -574,7 +575,7 @@
                                 </constraints>
                             </scrollView>
                             <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ehn-O4-t3p" userLabel="btnSend">
-                                <rect key="frame" x="289" y="898" width="81" height="48"/>
+                                <rect key="frame" x="289" y="947" width="81" height="48"/>
                                 <color key="backgroundColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                 <state key="normal" title="send">
@@ -586,7 +587,7 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="swQ-o9-kH7" userLabel="StarView">
-                                <rect key="frame" x="5" y="867" width="276" height="28"/>
+                                <rect key="frame" x="5" y="916" width="276" height="28"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OHo-2s-a3I" userLabel="btnStar1">
                                         <rect key="frame" x="21" y="6" width="20" height="22"/>
@@ -716,7 +717,7 @@
         <image name="surfing" width="240" height="180"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="MIK-OM-Aeo"/>
         <segue reference="1HE-Wk-FXQ"/>
+        <segue reference="oOf-A9-px3"/>
     </inferredMetricsTieBreakers>
 </document>
