--- a/WonderOZ/View/Base.lproj/Main.storyboard
+++ b/WonderOZ/View/Base.lproj/Main.storyboard
@@ -739,7 +739,18 @@
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="EFH-5U-H1y" id="e1N-wi-BVc"/>
+                                </connections>
                             </textField>
+                            <pickerView hidden="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6rB-fE-APm">
+                                <rect key="frame" x="0.0" y="456" width="375" height="162"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="EFH-5U-H1y" id="xSf-7I-Y7i"/>
+                                    <outlet property="delegate" destination="EFH-5U-H1y" id="068-2X-kXx"/>
+                                </connections>
+                            </pickerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="unh-yq-XAz"/>
@@ -750,20 +761,18 @@
                                 <rect key="frame" x="276" y="7" width="83" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Save"/>
+                                <connections>
+                                    <action selector="saveFunc:" destination="EFH-5U-H1y" eventType="touchUpInside" id="4ja-og-bGi"/>
+                                </connections>
                             </button>
-                            <connections>
-                                <action selector="saveFunc:" destination="EFH-5U-H1y" id="noO-ER-7wo"/>
-                            </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="CatePicker" destination="6rB-fE-APm" id="f5X-gh-zih"/>
                         <outlet property="Descript" destination="xz0-5I-C1r" id="dHE-7e-d6C"/>
-                        <outlet property="Title" destination="Aso-Ur-OJY" id="ecm-Bh-Z4y"/>
+                        <outlet property="TitleText" destination="Aso-Ur-OJY" id="mtr-kc-WWS"/>
                         <outlet property="cate" destination="dUn-34-bfB" id="tRt-vl-GGM"/>
                         <outlet property="location" destination="6m9-F8-hwR" id="qRP-Ug-OWj"/>
-                        <outlet property="saveFunc" destination="qiB-bx-Jjx" id="RUy-4o-pjf"/>
-                        <outlet property="tit" destination="Aso-Ur-OJY" id="IZn-rS-rbX"/>
-                        <outlet property="title" destination="Aso-Ur-OJY" id="UlW-Zk-5es"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="S0v-1b-W37" userLabel="First Responder" sceneMemberID="firstResponder"/>
